# goodbyeSwagger

./: .gitignore  Implementation_progress.md  MVP.md  MVP_progress.md  README.md  claude.md  functional_requirements.md  start-all.sh  stop-all.sh
About/: Prompts_log.txt
Accounts/: claude.md  start.sh  stop.sh
Accounts/API/: .env.example  Cargo.toml  test_api.sh  test_curl.sh
Accounts/API/src/: app_state.rs  main.rs
Accounts/API/src/handlers/: account_handlers.rs  auth_handlers.rs  batch_handlers.rs  customer_handlers.rs  mod.rs  product_handlers.rs
Accounts/API/src/middleware/: auth.rs  mod.rs
Accounts/API/src/models/: account_models.rs  common.rs  customer_models.rs  mod.rs  product_models.rs
Accounts/Application/: Cargo.toml
Accounts/Application/src/: config.rs  error.rs  lib.rs
Accounts/Application/src/domain/: account.rs  customer.rs  interest.rs  mod.rs  product.rs  transaction.rs  user.rs
Accounts/Application/src/repositories/: account_repository.rs  customer_repository.rs  mod.rs  product_repository.rs  transaction_repository.rs  user_repository.rs
Accounts/Application/src/repository/: account_repository.rs  interest_repository.rs  mod.rs  product_repository.rs  transaction_repository.rs  user_repository.rs
Accounts/Application/src/services/: account_service.rs  auth_service.rs  fee_service.rs  interest_service.rs  mod.rs  product_service.rs  transaction_service.rs
Accounts/Application/src/utils/: date.rs  decimal.rs  mod.rs  validation.rs
DevLog/: COMPLETION_SUMMARY.md  Implementation_tasks.md  MVP_implementation_tasks.md  RAG_COMPLETION_SUMMARY.md  RAG_implementation.md  RAG_implementation_progress.md
RAG/: README.md  start_rag.sh  (+2 more)
(+86 files in other folders)
