[package]
name = "accounts_application"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# Precise decimal arithmetic for financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
log = "0.4"

# Password hashing
bcrypt = "0.15"

[dev-dependencies]
# Testing
env_logger = "0.11"
rust_decimal_macros = "1.33"

[lib]
name = "accounts_application"
path = "src/lib.rs"
